Opened 12 years ago

Closed 12 years ago

#3522 closed defect (fixed)

FFMPEG unable to read some WTV files (with only video streams)

Reported by: ramitb Owned by:
Priority: important Component: avformat
Version: git-master Keywords: wtv regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: Recently with the newer builds of ffmpeg it is unable to read some WTV files that only contain video streams.

This happened after a recent build of ffmpeg. I suspect it may be related to some changes made in #3473

I'm unable to reproduce teh issue with a smaller chunk of the video file so I've uploaded the entire file into the incoming folder.

This is a regression issue.

How to reproduce:
With newer build

ffmpeg -i OnlyVideo.wtv -vcodec copy -acodec copy test.ts -y
ffmpeg version N-62019-gd506dea Copyright (c) 2000-2014 the FFmpeg developers
  built on Apr  1 2014 13:31:14 with gcc 4.8.0 (GCC)
  configuration: --arch=x86 --target-os=mingw32 --cross-prefix=/Software/ffmpeg/sandbox/mingw-w64-i686/bin/i686-w64-ming
w32- --pkg-config=pkg-config --enable-gpl --enable-libx264 --enable-avisynth --enable-libxvid --enable-libmp3lame --enab
le-version3 --enable-zlib --enable-librtmp --enable-libvorbis --enable-libtheora --enable-libspeex --enable-libopenjpeg
--enable-gnutls --enable-libgsm --enable-libfreetype --enable-libopus --disable-w32threads --enable-frei0r --enable-filt
er=frei0r --enable-libvo-aacenc --enable-bzlib --enable-libxavs --extra-cflags=-DPTW32_STATIC_LIB --enable-libopencore-a
mrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-libschroedinger --enable-libvpx --enable-libilbc --pref
ix=/Software/ffmpeg/sandbox/mingw-w64-i686/i686-w64-mingw32 --enable-static --disable-shared --enable-libsoxr --enable-f
ontconfig --enable-libass --enable-libutvideo --enable-libbluray --enable-iconv --enable-libtwolame --extra-cflags=-DLIB
TWOLAME_STATIC --enable-libzvbi --enable-libcaca --enable-libmodplug --extra-libs=-lstdc++ --extra-libs=-lpng --enable-l
ibvidstab --extra-cflags= --extra-cflags= --enable-nonfree --enable-libfdk-aac --enable-libfaac --enable-runtime-cpudete
ct
  libavutil      52. 71.100 / 52. 71.100
  libavcodec     55. 55.107 / 55. 55.107
  libavformat    55. 36.100 / 55. 36.100
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  5.102 /  2.  5.102
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
[NULL @ 03d23bc0] Failed to read extradata of size 618660141
OnlyVideo.wtv: End of file

With older build

ffmpeg.2315Custom -i OnlyVideo.wtv -vcodec copy -acodec copy test.ts -y
ffmpeg version N-59362-ge079661 Copyright (c) 2000-2013 the FFmpeg developers
  built on Dec 25 2013 17:42:26 with gcc 4.8.0 (GCC)
  configuration: --arch=x86 --target-os=mingw32 --cross-prefix=/home/mcebuddy/Software/ffmpeg/sandbox/mingw-w64-i686/bin
/i686-w64-mingw32- --pkg-config=pkg-config --enable-gpl --enable-libx264 --enable-avisynth --enable-libxvid --enable-lib
mp3lame --enable-version3 --enable-zlib --enable-librtmp --enable-libvorbis --enable-libtheora --enable-libspeex --enabl
e-libopenjpeg --enable-gnutls --enable-libgsm --enable-libfreetype --enable-libopus --disable-w32threads --enable-frei0r
 --enable-filter=frei0r --enable-libvo-aacenc --enable-bzlib --enable-libxavs --extra-cflags=-DPTW32_STATIC_LIB --enable
-libopencore-amrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-libschroedinger --enable-libvpx --enable-
libilbc --enable-iconv --enable-libtwolame --extra-cflags=-DLIBTWOLAME_STATIC --enable-libmodplug --extra-libs=-lstdc++
--enable-libzvbi --enable-libcaca --prefix=/home/mcebuddy/Software/ffmpeg/sandbox/mingw-w64-i686/i686-w64-mingw32 --enab
le-static --disable-shared --enable-libsoxr --enable-fontconfig --enable-libass --enable-libutvideo --enable-libbluray -
-extra-cflags= --enable-nonfree --enable-libfdk-aac --enable-runtime-cpudetect
  libavutil      52. 59.100 / 52. 59.100
  libavcodec     55. 46.100 / 55. 46.100
  libavformat    55. 22.100 / 55. 22.100
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     4.  0.102 /  4.  0.102
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
Input #0, wtv, from 'OnlyVideo.wtv':
  Metadata:
    WM/MediaClassPrimaryID: db9830bd-3ab3-4fab-8a371a995f7ff74
    WM/MediaClassSecondaryID: ba7f258a-62f7-47a9-b21f4651c42a000
    Title           : Law & Order: Special Victims Unit
    WM/SubTitle     : Scheherezade
    WM/SubTitleDescription: A cancer patient (Brian Dennehy) makes a deathbed confession involving a number of crimes fr
om decades earlier.
    genre           : Drama;General;Series
    WM/OriginalReleaseTime: 0
    WM/MediaCredits : Christopher Meloni/Mariska Hargitay/Richard Belzer/Dann Florek/Ice-T/B.D. Wong/Diane Neal/Tamara T
unie;;;Brian Dennehy/Paget Brewster
    service_provider: USA
    service_name    : USA Network
    WM/MediaNetworkAffiliation: Satellite
    WM/MediaOriginalChannel: 42
    WM/MediaOriginalChannelSubNumber: 0
    WM/MediaOriginalBroadcastDateTime: 2007-01-02T05:00:00Z
    WM/MediaOriginalRunTime: 23673448201
    WM/MediaIsStereo: true
    WM/MediaIsRepeat: true
    WM/MediaIsLive  : false
    WM/MediaIsTape  : false
    WM/MediaIsDelay : false
    WM/MediaIsSubtitled: false
    WM/MediaIsMovie : false
    WM/MediaIsPremiere: false
    WM/MediaIsFinale: false
    WM/MediaIsSAP   : false
    WM/MediaIsSport : false
    WM/ParentalRating: TV-14
    WM/Provider     : MediaCenterDefault
    WM/VideoClosedCaptioning: true
    WM/WMRVEncodeTime: 2013-10-24 23:22:32
    WM/WMRVSeriesUID: !MCSeries!00316978
    WM/WMRVServiceID: !MCService!28459373
    WM/WMRVProgramID: !MCProgram!50023310
    WM/WMRVRequestID: 0
    WM/WMRVScheduleItemID: 0
    WM/WMRVQuality  : 3
    WM/WMRVOriginalSoftPrePadding: 1400
    WM/WMRVOriginalSoftPostPadding: 120
    WM/WMRVHardPrePadding: -1340
    WM/WMRVHardPostPadding: 0
    WM/WMRVATSCContent: false
    WM/WMRVDTVContent: false
    WM/WMRVHDContent: false
    Duration        : 529940311
    WM/WMRVEndTime  : 2013-10-24 23:23:25
    WM/WMRVBitrate  : 8.257536
    WM/WMRVKeepUntil: 0
    WM/WMRVActualSoftPrePadding: -11
    WM/WMRVActualSoftPostPadding: -2194
    WM/WMRVContentProtected: false
    WM/WMRVContentProtectedPercent: 0
    WM/WMRVExpirationSpan: 9223372036854775807
    WM/WMRVInBandRatingSystem: 255
    WM/WMRVInBandRatingLevel: 255
    WM/WMRVInBandRatingAttributes: 0
    WM/WMRVWatched  : false
    encoder         : Lavf55.20.100
  Duration: 00:00:51.51, start: 0.858151, bitrate: 7375 kb/s
    Stream #0:0[0x2]: Video: mpeg2video (Main), yuv420p(tv), 720x480 [SAR 8:9 DAR 4:3], max. 9000 kb/s, 29.97 fps, 29.97
 tbr, 10000k tbn, 59.94 tbc
Output #0, mpegts, to 'test.ts':
  Metadata:
    WM/MediaClassPrimaryID: db9830bd-3ab3-4fab-8a371a995f7ff74
    WM/MediaClassSecondaryID: ba7f258a-62f7-47a9-b21f4651c42a000
    Title           : Law & Order: Special Victims Unit
    WM/SubTitle     : Scheherezade
    WM/SubTitleDescription: A cancer patient (Brian Dennehy) makes a deathbed confession involving a number of crimes fr
om decades earlier.
    genre           : Drama;General;Series
    WM/OriginalReleaseTime: 0
    WM/MediaCredits : Christopher Meloni/Mariska Hargitay/Richard Belzer/Dann Florek/Ice-T/B.D. Wong/Diane Neal/Tamara T
unie;;;Brian Dennehy/Paget Brewster
    service_provider: USA
    service_name    : USA Network
    WM/MediaNetworkAffiliation: Satellite
    WM/MediaOriginalChannel: 42
    WM/MediaOriginalChannelSubNumber: 0
    WM/MediaOriginalBroadcastDateTime: 2007-01-02T05:00:00Z
    WM/MediaOriginalRunTime: 23673448201
    WM/MediaIsStereo: true
    WM/MediaIsRepeat: true
    WM/MediaIsLive  : false
    WM/MediaIsTape  : false
    WM/MediaIsDelay : false
    WM/MediaIsSubtitled: false
    WM/MediaIsMovie : false
    WM/MediaIsPremiere: false
    WM/MediaIsFinale: false
    WM/MediaIsSAP   : false
    WM/MediaIsSport : false
    WM/ParentalRating: TV-14
    WM/Provider     : MediaCenterDefault
    WM/VideoClosedCaptioning: true
    WM/WMRVEncodeTime: 2013-10-24 23:22:32
    WM/WMRVSeriesUID: !MCSeries!00316978
    WM/WMRVServiceID: !MCService!28459373
    WM/WMRVProgramID: !MCProgram!50023310
    WM/WMRVRequestID: 0
    WM/WMRVScheduleItemID: 0
    WM/WMRVQuality  : 3
    WM/WMRVOriginalSoftPrePadding: 1400
    WM/WMRVOriginalSoftPostPadding: 120
    WM/WMRVHardPrePadding: -1340
    WM/WMRVHardPostPadding: 0
    WM/WMRVATSCContent: false
    WM/WMRVDTVContent: false
    WM/WMRVHDContent: false
    Duration        : 529940311
    WM/WMRVEndTime  : 2013-10-24 23:23:25
    WM/WMRVBitrate  : 8.257536
    WM/WMRVKeepUntil: 0
    WM/WMRVActualSoftPrePadding: -11
    WM/WMRVActualSoftPostPadding: -2194
    WM/WMRVContentProtected: false
    WM/WMRVContentProtectedPercent: 0
    WM/WMRVExpirationSpan: 9223372036854775807
    WM/WMRVInBandRatingSystem: 255
    WM/WMRVInBandRatingLevel: 255
    WM/WMRVInBandRatingAttributes: 0
    WM/WMRVWatched  : false
    encoder         : Lavf55.22.100
    Stream #0:0: Video: mpeg2video, yuv420p, 720x480 [SAR 8:9 DAR 4:3], q=2-31, max. 9000 kb/s, 29.97 fps, 90k tbn, 29.9
7 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
Press [q] to stop, [?] for help
frame= 1519 fps=0.0 q=-1.0 Lsize=   49915kB time=00:00:50.58 bitrate=8083.6kbits/s
video:46125kB audio:0kB subtitle:0 global headers:0kB muxing overhead 8.215764%

Change History (3)

comment:1 by ramitb, 12 years ago

The file is

#3522.wtv

comment:2 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavformat
Keywords: wtv regression added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since 73a2d16b

comment:3 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: openclosed

Fixed by Peter Ross in 8348bd19

Note: See TracTickets for help on using tickets.