avformat/wtvdec: ignore MPEG2VIDEO extradata when count is invalid

Fixes ticket #3522.

Signed-off-by: Peter Ross <pross@xvid.org>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>